# mpagree

./: .editorconfig  .gitignore  EngineDockerfile  Makefile  ServerDockerfile  mpagree.sln
.github/workflows/: engine-ci.yml  server-CI.yml
Server/: Program.cs  Server.csproj
Server/Commands/: ClientCommand.cs  Command.cs  ServerCommand.cs  TestClientCommand.cs  WorkerCommand.cs
Server/Db/: ConnyExtensions.cs  ConnyFactory.cs  Context.cs  Helper.cs  Init.cs  Mapping.cs  Options.cs  Session.cs
Server/Grpc/: QueueGrpcService.cs
Server/Migrations/: 01_Init.cs
Server/Models/: Contexts.cs
Server/Repos/: IRepo.cs  QueueRepo.cs
Server/Services/: IService.cs
Server/Utils/: ContextHelper.cs  EnumHelper.cs  Reflection.cs
agreed/: Cargo.toml  build.rs
agreed/src/: grpc.rs  lib.rs
agreed/src/model/: state.rs
engine/: Cargo.toml  build.rs  rustfmt.toml
engine/src/: grpc.rs  lib.rs
engine/src/model/: state.rs
protos/mpagree/engine/: service.proto
protos/mpagree/service/: service.proto
protos/mpagree/validator/: service.proto
scripts/: docker-otel-platform-fix.sh
terraform/: Makefile
terraform/database/: user.tf  variables.tf
terraform/local/: Makefile  main.tf  wipe.sql
terraform/local/databases/: db.tf
terraform/resources/: pg.tf  resource_group.tf  variables.tf
