[package]
name = "agreed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12"
tonic = "0.11"
tokio = { version = "1.0", features = ["full"] }

[build-dependencies]
tonic-build = "0.11"

[[bin]]
name = "service"
path = "./src/bin/validation_server.rs"

[[bin]]
name = "client"
path = "./src/bin/client.rs"
