[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.13"
prost-types = "0.13"
tonic = "0.12"
tokio = { version = "1.0", features = ["full"] }

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "service"
path = "./src/bin/validator_server.rs"

[[bin]]
name = "client"
path = "./src/bin/client.rs"

[[bin]]
name = "validator_test_client"
path = "./src/bin/validator_test_client.rs"
